[gd_scene load_steps=2 format=3 uid="uid://cu6tmmpapw87t"]

[ext_resource type="Script" path="res://Scripts/StatusLabels.gd" id="1_8k87j"]

[node name="StatusLabels" type="MarginContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -55.0
offset_bottom = 139.0
grow_horizontal = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("1_8k87j")

[node name="StatusLabelsVBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HPLabel" type="Label" parent="StatusLabelsVBox"]
unique_name_in_owner = true
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="GoldLabel" type="Label" parent="StatusLabelsVBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="CombatLabel" type="Label" parent="StatusLabelsVBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="CunningLabel" type="Label" parent="StatusLabelsVBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="TrinketsHBox" type="HBoxContainer" parent="StatusLabelsVBox"]
layout_mode = 2
size_flags_horizontal = 8

[node name="TrinketsLabel" type="Label" parent="StatusLabelsVBox/TrinketsHBox"]
unique_name_in_owner = true
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="TrinketsButton" type="Button" parent="StatusLabelsVBox/TrinketsHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "Show"

[node name="DiceHBox" type="HBoxContainer" parent="StatusLabelsVBox"]
layout_mode = 2
size_flags_horizontal = 8

[node name="DiceLabel" type="Label" parent="StatusLabelsVBox/DiceHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
metadata/_edit_use_anchors_ = true

[node name="DiceButton" type="Button" parent="StatusLabelsVBox/DiceHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "Show"
